--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -1,11 +1,12 @@
 .projects {
-  margin: 6rem 0;
+  padding: 6rem 0 2.5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 
   &__title {
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin-bottom: 2rem;
   }
 
@@ -17,7 +18,8 @@
 
   &__line {
     border-top: 1px solid rgba(0, 0, 0, 0.25);
-    margin: 2.5rem 0 5rem 0;
+    // margin: 2.5rem 0 5rem 0;
+    margin: 5rem 0;
   }
 }
 
