--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,600;1,400&display=swap");
 @import "./global/index.scss";
+
+.admin-buttons {
+  display: flex;
+  margin: 0 auto;
+
+  & button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    color: #fff;
+  }
+
+  & i {
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
+    color: red;
+    background-color: #fff;
+  }
+}
