--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 5rem 3rem;
+  background-color: #ddd;
 
   &__title {
     font-size: 2rem;
