--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -4,7 +4,6 @@
   padding: 2rem 2.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   background-image: url(https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1413&q=80);
   background-color: rgba(0, 0, 0, 0.8);
@@ -13,13 +12,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  height: 60vh;
 
   &__container {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    min-height: 60vh;
     max-width: 35rem;
   }
 
@@ -57,5 +57,11 @@
     color: #fff;
     font-size: 1.25rem;
     font-weight: 300;
+  }
+}
+
+@media only screen and (max-height: 750px) {
+  .header {
+    height: 100vh;
   }
 }
