--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -66,9 +66,9 @@
     }
   }
 
-  &__description--grid {
+  &__description--grid-1 {
     display: grid;
-    grid-template-columns: min-content min-content;
+    grid-template-columns: max-content max-content;
     column-gap: 4rem;
     row-gap: 1rem;
     margin-top: 1rem;
@@ -92,5 +92,23 @@
 
   &__description {
     margin-bottom: 2.5rem;
+
+    &--grid-2 {
+      display: flex;
+      flex-direction: column;
+      margin-top: 1rem;
+
+      & p {
+        display: flex;
+        align-items: center;
+
+        & i {
+          font-size: 0.5rem;
+          margin-right: 0.75rem;
+          margin-top: 0.35rem;
+          align-self: start;
+        }
+      }
+    }
   }
 }
