created scss color vars and imported them throughout the project

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,10 @@
     border: none;
     background: none;
     color: #fff;
+
+    &:hover {
+      background-color: $color-primary;
+    }
   }
 
   & i {
