--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,13 +1,16 @@
+@import "../../styles/global/variables";
+
 .footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 5rem 3rem;
-  background-color: #ddd;
+  background-color: $color-primary;
+  color: #fff;
 
   &__title {
-    font-size: 2rem;
+    font-size: 2.2rem;
     margin-bottom: 1rem;
   }
 
