--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,3 +1,5 @@
+@import "../../styles/global/variables";
+
 .header {
   background-color: #ddd;
   color: #fff;
@@ -26,6 +28,7 @@
   &__title {
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    color: #fff;
   }
 
   &__text {
@@ -49,7 +52,13 @@
 
   &__logo {
     font-size: 1.75rem;
-    font-weight: 600;
+    font-weight: 500;
+
+    & span {
+      color: $color-primary;
+      font-weight: 600;
+      font-size: 2rem;
+    }
   }
 
   &__link {
