--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -1,3 +1,5 @@
+@import "../../styles/global/variables";
+
 .projects {
   padding: 6rem 0 2.5rem 0;
   display: flex;
@@ -8,6 +10,7 @@
   &__title {
     font-size: 2rem;
     margin-bottom: 2rem;
+    color: $color-primary;
   }
 
   &__container {
@@ -18,7 +21,6 @@
 
   &__line {
     border-top: 1px solid rgba(0, 0, 0, 0.25);
-    // margin: 2.5rem 0 5rem 0;
     margin: 5rem 0;
   }
 }
@@ -30,18 +32,14 @@
 
   // col-1
   &__name {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     margin-bottom: 1.5rem;
   }
 
   &__image {
-    // border: 1px solid black;
-    height: 12.5rem;
-    width: 90%;
-    margin-bottom: 1.5rem;
-    // background-image: url("../../assets/img/moviebase-watchlist.png");
-    // background-position: center;
-    // background-size: cover;
+    width: 100%;
+    margin-bottom: 2rem;
+    box-shadow: 0 7.5px 25px rgba(0, 0, 0, 0.2);
 
     & img {
       width: 100%;
@@ -57,19 +55,29 @@
 
     & button {
       margin-right: 1.5rem;
-      border-radius: 25px;
-      border: 1px solid black;
-      background-color: transparent;
-      padding: 0.5rem 1.5rem;
+      border-radius: 5px;
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      background-color: $color-primary;
+      padding: 0.75rem 1.2rem;
       cursor: pointer;
       margin-bottom: 0.75rem;
+      transition: 0.5s;
+      box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
 
       & i {
         margin-right: 0.25rem;
       }
 
       &:hover {
-        opacity: 0.7;
+        box-shadow: 0 30px 15px -10px rgba(0, 0, 0, 0.2);
+        transform: translateY(-3px);
+        animation-duration: 1.5s;
+        animation-delay: 0.3s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
       }
     }
   }
@@ -82,12 +90,14 @@
     margin-top: 1rem;
 
     & p {
-      display: flex;
-      align-items: center;
+      position: relative;
+      margin-left: 1.25rem;
 
       & i {
+        position: absolute;
+        top: 0.3rem;
+        left: -1.25rem;
         font-size: 0.5rem;
-        margin-right: 0.75rem;
       }
     }
   }
@@ -96,6 +106,10 @@
   &__title {
     font-size: 1.25rem;
     margin-bottom: 0.75rem;
+
+    &:first-child {
+      margin-top: 3.5rem;
+    }
   }
 
   &__description {
@@ -107,16 +121,21 @@
       margin-top: 1rem;
 
       & p {
-        display: flex;
-        align-items: center;
+        position: relative;
+        margin-left: 1.25rem;
 
         & i {
+          position: absolute;
+          top: 0.3rem;
+          left: -1.25rem;
           font-size: 0.5rem;
-          margin-right: 0.75rem;
-          margin-top: 0.35rem;
-          align-self: start;
         }
       }
     }
+  }
+
+  &__text--highlight {
+    color: $color-primary;
+    font-weight: 600;
   }
 }
