--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -15,6 +15,7 @@
   background-size: cover;
   background-attachment: fixed;
   height: 70vh;
+  min-height: 35rem;
 
   &__container {
     flex: 1;
@@ -69,8 +70,26 @@
   }
 }
 
-@media only screen and (max-height: 750px) {
+@media only screen and (max-height: 820px) {
   .header {
     height: 100vh;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .header {
+    padding: 2rem 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 325px) {
+  .nav {
+    &__item:last-child {
+      display: none;
+    }
+
+    &__links {
+      justify-content: center;
+    }
   }
 }
