--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,22 +3,31 @@
 
 .admin-buttons {
   display: flex;
-  margin: 0 auto;
+  align-self: center;
+  justify-content: space-evenly;
+  width: 100%;
+  max-width: 25rem;
+  flex-wrap: wrap;
 
   & button {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 5.75rem;
     padding: 1rem;
     cursor: pointer;
     font-size: 1rem;
     border: none;
     background: none;
     color: #fff;
+    transition: 0.5s;
 
     &:hover {
+      border-radius: 50%;
       background-color: $color-primary;
+      transform: translateY(-10px);
+      animation-duration: 1s;
     }
   }
 
