added smooth scroll to projects link in navbar and an opacity transition for projects using the intersection observer api

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -67,6 +67,12 @@
     color: #fff;
     font-size: 1.25rem;
     font-weight: 300;
+    padding: 0.5rem;
+    transition: 0.3s;
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
 
