--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -1,15 +1,14 @@
 @import "../../styles/global/variables";
 
 .projects {
-  padding: 6rem 0 2.5rem 0;
+  padding: 5rem 0 2.5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 
   &__title {
-    font-size: 2rem;
-    margin-bottom: 2rem;
+    font-size: 2.1rem;
     color: $color-primary;
   }
 
@@ -29,6 +28,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
+  transition: opacity 1s;
+
+  &--hidden {
+    opacity: 0;
+  }
 
   // col-1
   &__name {
@@ -140,7 +144,7 @@
   }
 }
 
-@media screen and (max-width: 675px) {
+@media only screen and (max-width: 675px) {
   .project {
     display: flex;
     flex-direction: column;
