--- a/src/components/technologiesBar/styles.scss
+++ b/src/components/technologiesBar/styles.scss
@@ -15,7 +15,7 @@
   }
 }
 
-@media screen and (max-width: 530px) {
+@media only screen and (max-width: 530px) {
   .technolgies-bar {
     display: none;
   }
