--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -47,6 +47,7 @@
 
     & img {
       width: 100%;
+      height: 100%;
       display: block;
     }
   }
@@ -122,11 +123,15 @@
     &--grid-2 {
       display: flex;
       flex-direction: column;
-      margin-top: 1rem;
 
       & p {
         position: relative;
         margin-left: 1.25rem;
+        margin-top: 1rem;
+
+        &:first-child {
+          margin-top: 0;
+        }
 
         & i {
           position: absolute;
