--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -8,9 +8,10 @@
   flex-direction: column;
   align-items: center;
   background-image: url(https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1413&q=80);
-  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(https://images.unsplash.com/photo-1534374950034-3644ddb72710?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80);
+  background-color: rgba(0, 0, 0, 0.75);
   background-blend-mode: overlay;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
