--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,7 +2,8 @@
 
 .header {
   background-color: #ddd;
-  color: #fff;
+  // color: #fff;
+  color: red;
   padding: 2rem 2.5rem;
   display: flex;
   flex-direction: column;
