--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,8 +2,7 @@
 
 .header {
   background-color: #ddd;
-  // color: #fff;
-  color: red;
+  color: #fff;
   padding: 2rem 2.5rem;
   display: flex;
   flex-direction: column;
