disabled portfolio live preview btn

--- a/src/components/projects/styles.scss
+++ b/src/components/projects/styles.scss
@@ -77,12 +77,17 @@
       &:hover {
         box-shadow: 0 30px 15px -10px rgba(0, 0, 0, 0.2);
         transform: translateY(-5px);
-        border-radius: 20px;
         animation-duration: 1.5s;
         animation-delay: 0.3s;
         animation-timing-function: linear;
         animation-iteration-count: infinite;
         animation-direction: alternate;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        pointer-events: none;
+        background-color: rgba($color-primary, 0.5);
       }
     }
   }
